Added comments within the HTML and CSS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <!-- This is the navigation bar  -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,10 +25,12 @@
             </ul>
         </div>
     </header>
-    <div class="hero" alt= "Group of people surrounding a table having a marketing meeting";
+    <div class="hero"
   background-size: cover;>
     </div>
+    <!-- This is the main section of the web page  -->
     <nav class="content">
+        <!-- This is where I combined the classes with the same properties and named the class 'services' -->
         <article class="services">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desktop with a notebook opened to a page that says 'SEO'"/>
             <h2>Search Engine Optimization</h2>
@@ -50,6 +53,8 @@
             </p>
         </article>
     </nav>
+    <!-- This is the side bar. This is where I combined the three classes with the same properties and named it benefit -->
+   <!-- I removed unnecesary IDs withing this section  -->
     <aside class="benefits">
         <div class="benefit">
             <h3>Lead Generation</h3>
